syntax = "proto3";

package eater;

message ManualWeightRequest {
  float weight = 1;
  string user_email = 2;
}

message ManualWeightResponse {
  bool success = 1;
} 