syntax = "proto3";

message Contains {
  double carbohydrates = 1;
  double fats = 2;
  double proteins = 3;
  double sugar = 4;
}

message Dish {
  int64 time = 1;
  string dish_name = 2;
  int32 estimated_avg_calories = 3;
  repeated string ingredients = 4;
  int32 total_avg_weight = 5;
}

message TotalForDay {
  Contains contains = 1;
  int32 total_avg_weight = 2;
  int32 total_calories = 3;
}

message TodayFood {
  repeated Dish dishes_today = 1;
  TotalForDay total_for_day = 2;
  float person_weight = 3;
} 